--- a/package.json
+++ b/package.json
@@ -1,24 +1,30 @@
 {
   "name": "gulp-text-simple",
   "version": "0.1.0",
-  "description": "create string based gulp tasks",
   "main": "index.js",
+  "description": "simple creation of Gulp task functions for transforming text files",
+  "files": [
+    "src",
+    "test"
+  ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+ssh://git@github.com/mastersign/gulp-text-simple.git"
-  },
+  "repository": "mastersign/gulp-text-simple",
   "keywords": [
     "gulp",
     "task",
     "factory"
   ],
-  "author": "Tobias Kiertscher <dev@mastersign.de>",
+  "author": {
+    "name": "Tobias Kiertscher",
+    "email": "dev@mastersign.de",
+    "url": "http://www.mastersign.de"
+  },
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/mastersign/gulp-text-simple/issues"
+    "url": "https://github.com/mastersign/gulp-text-simple/issues",
+    "email": "dev@mastersign.de"
   },
   "homepage": "https://github.com/mastersign/gulp-text-simple#readme",
   "dependencies": {
