--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gulp-text-simple",
   "version": "0.3.0",
-  "description": "simple creation of Gulp task functions for transforming text files",
+  "description": "simple creation of Gulp transformations for text files",
   "main": "src/index.js",
   "files": [
     "src",
