added missing dev dependency for mocha

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "devDependencies": {
     "del": "^2.2.0",
     "event-stream": "^3.3.0",
+    "mocha": "^4.1.0",
     "vinyl": "^2.0.0"
   }
 }
