--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "through2": "^2.0.0"
   },
   "devDependencies": {
-    "del": "^2.2.0",
+    "async": "^2.6.0",
+    "del": "^3.0.0",
     "event-stream": "^3.3.0",
     "mocha": "^3.5.3",
     "vinyl": "^2.0.0"
