add NodeJS 10 to test suite

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,6 +10,10 @@ test (NodeJS latest): &test-definition
   tags:
     - docker
 
+test (NodeJS 10):
+  image: node:10-alpine
+  <<: *test-definition
+
 test (NodeJS 8):
   image: node:8-alpine
   <<: *test-definition
