use yarn in GitLab CI file instead of npm

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,12 +1,12 @@
 image: node:alpine
 
 before_script:
-  - npm install
+  - yarn install
 
 test (NodeJS latest): &test-definition
   stage: test
   script:
-    - npm test
+    - yarn test
   tags:
     - docker
 
