--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,7 +6,7 @@ before_script:
 test (NodeJS latest): &test-definition
   stage: test
   script:
-    - npm test
+    - yarn test
   tags:
     - docker
 
