--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   "devDependencies": {
     "async": "^2.6.0",
     "del": "^3.0.0",
-    "event-stream": "^4.0.0",
+    "event-stream": "3.3.4",
     "mocha": "^5.2.0",
     "vinyl": "^2.2.0"
   }
