--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "simple creation of Gulp transformations for text files",
   "main": "src/index.js",
   "files": [
-    "src",
-    "test"
+    "src"
   ],
   "scripts": {
     "test": "mocha"
@@ -28,12 +27,12 @@
   },
   "homepage": "https://github.com/mastersign/gulp-text-simple#readme",
   "dependencies": {
-    "lodash": "^4.0.0",
-    "readable-stream": "^3.0.0",
-    "through2": "^3.0.0"
+    "lodash": "^4.17.20",
+    "readable-stream": "^3.6.0",
+    "through2": "^3.0.2"
   },
   "devDependencies": {
-    "async": "^2.6.0",
+    "async": "^2.6.3",
     "del": "^3.0.0",
     "event-stream": "3.3.4",
     "mocha": "^5.2.0",
