added NodeJS 12 and 14 to the test environments

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,6 +10,14 @@ test (NodeJS latest): &test-definition
   tags:
     - docker
 
+test (NodeJS 14):
+  image: node:14-alpine
+  <<: *test-definition
+
+test (NodeJS 12):
+  image: node:12-alpine
+  <<: *test-definition
+
 test (NodeJS 10):
   image: node:10-alpine
   <<: *test-definition
